# magpie-plugins

./: .gitignore  Cargo.toml
magpie/: Cargo.toml
magpie/src/: lib.rs
src/: lib.rs  library-init.rs  library-sync.rs  library.rs
